argocd/k8s/renovate/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: renovate-network-policy
  namespace: renovate
spec:
  endpointSelector:
    matchLabels:
      app: renovate
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
            - matchPattern: "*"
    - toEntities:
        - world
